[profile.release]
debug = true

[workspace]
members = [
  "components/butterfly",
  "components/butterfly-test",
  "components/common",
  "components/core",
  "components/eventsrv",
  "components/eventsrv-client",
  "components/eventsrv-protocol",
  "components/hab",
  "components/hab-butterfly",
  "components/launcher",
  "components/launcher-client",
  "components/launcher-protocol",
  "components/pkg-export-docker",
  "components/pkg-export-helm",
  "components/pkg-export-kubernetes",
  "components/sup"
]
